[metadata]
name = mistral_tempest_tests
summary = Tempest plugin for Mistral project
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/mistral-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    mistral_tempest_tests

[entry_points]
tempest.test_plugins =
    mistral_test = mistral_tempest_tests.plugin:MistralTempestPlugin

[build_sphinx]
all_files = 1
warning_is_error = 1
source_dir = doc/source
build_dir = doc/build

[upload_sphinx]
upload_dir = doc/build/html

[compile_catalog]
directory = mistral_tempest_tests/locale
domain = mistral_tempest_tests

[update_catalog]
domain = mistral_tempest_tests
output_dir = mistral_tempest_tests/locale
input_file = mistral_tempest_tests/locale/mistral_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = mistral_tempest_tests/locale/mistral_tempest_plugin.pot
