[metadata]
name = mistral_tempest_tests
summary = Tempest plugin for Mistral project
description_file =
    README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/mistral-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    mistral_tempest_tests

[entry_points]
tempest.test_plugins =
    mistral_test = mistral_tempest_tests.plugin:MistralTempestPlugin
